k3s/apps/backrest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backrest
  namespace: monitoring
spec:
  type: ClusterIP
  selector:
    app: backrest
  ports:
    - name: web
      port: 9898
      targetPort: 9898
      protocol: TCP
